[tool.poetry]
name = "langchain-practice"
version = "0.1.0"
description = ""
authors = ["alsrlqor <skyup9393@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.25"
langchain-openai = "^0.3.16"
langchain-community = "^0.3.23"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
